--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+pprof
+test.db
+test.db-shm
+test.db-wal
+.gitignore
